--- a/templates/usersignup.html
+++ b/templates/usersignup.html
@@ -8,7 +8,12 @@
     <div class="col-md-4"></div>
 
     <div class="col-md-4">
-        <form action="/signupdata" method="post">
+        <form action="/signup" method="post">
+
+            <div class="form-group">
+                <input type="text" class='form-control mt-2' placeholder="Enter Customer ID" name="id" required>
+            </div>
+            
             <div class="form-group">
                 <input type="text" class='form-control mt-2' placeholder="Enter First Name" name="fname" required>
             </div>
@@ -40,7 +45,7 @@
             <div class="form-group">
                 <input type="password" class='form-control mt-2' placeholder="Set passsword" name="password" required>
             </div>
-            
+
             <br>
             <button type="submit" class="btn btn-info">Signup</button>
         </form>
