--- a/templates/usersignup.html
+++ b/templates/usersignup.html
@@ -11,7 +11,7 @@
         <form action="/signup" method="post">
 
             <div class="form-group">
-                <input type="text" class='form-control mt-2' placeholder="Enter Customer ID" name="id" required>
+                <input type="text" class='form-control mt-2' placeholder="Enter Customer ID" name="cid" required>
             </div>
             
             <div class="form-group">
